main.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
}

body {
  font-family: "Lato", sans-serif;
}

/* #section1 h1, h2, button, a {
  text-align: center;
} */

#section1_wrapper {
  background: linear-gradient( to bottom right, rgba(30, 115, 172, 0.7), rgba(203, 22, 209, 0.2)), url("fast.gif");
  background-size: cover;
  background-repeat: no-repeat;
  height: 1000px;
}



#section1 {
  text-align: center;
  
}

h1 {
  font-size: 80px;
  color: #DFDFE5;
  padding-top: 300px;
}

h2 {
  font-size: 30px;
}

#h1_name {
  display: none;
}

#h2_role {
  display: none;
}

#see_proj_btn {
  display: none;
}

#section1 h2 {
  font-size: 30px;
  margin-top: 10px;
  color: white;
  margin-bottom: 30px;
}

#section1_btn {
  text-decoration: none;
  color: white;
  border-radius: 80% !important;
  cursor: pointer;
}

@media screen and (max-width: 1024px) {
  #section1 h1 {
      font-size: 80px;
  }
}

@media screen and (max-width: 768px) {
  #section1 h1 {
      font-size: 4.0rem;
  }

  #section1 h2 {
      font-size: 1.5rem;
  }
}

@media screen and (max-width: 480px) {
  #section1 h1 {
      font-size: 3.0rem;
  }

  #section1 h2 {
      font-size: 1.5rem;
  }

  #section1_wrapper {
    background: linear-gradient( to bottom right, rgba(30, 115, 172, 0.7), rgba(203, 22, 209, 0.2)), url("fast.gif");
    background-size: cover;
    background-repeat: no-repeat;
    height: 800px;
  }
}

#section2_wrapper {
  background-color: white;
  height: 800px;
}
#section3_wrapper {
  background-color: blue;
  height: 1000px;
}
#section4_wrapper {
  background-color: brown;
  height: 1000px;
}

#section2 {
  margin-left: 200px;
  margin-right: 600px;
  padding-top: 250px;
}

#section2 h2 {
  padding-bottom: 50px;
}

#section2 p {
  padding-bottom: 50px;
}

#section2-1 {
  position: relative;
  margin-left: 200px;
  margin-right: 600px;
  padding-top: 250px;
}

